gcc/testsuite/gm2/errors/fail/binarygeneric.mod
MODULE binarygeneric ;

FROM SYSTEM IMPORT WORD ;

VAR
   a, b, c: WORD ;
BEGIN
   b := 1 ;
   c := 2 ;
   a := b + c
END binarygeneric.
